got the questions to apear and change to the next one, need to get options to work now

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                         <p id="question" class="card-text"> </p>
                     </div>
                     <div id="options">
-                        <label id="option1" class="list-group-item" type="radio"><span>answer 1</span></label>
-                        <label id="option2" class="list-group-item" type="radio"><span>answer 2</span></label>
-                        <label id="option3" class="list-group-item" type="radio"><span>answer 3</span></label>
+                        <input id="option1" class="list-group-item" type="radio"><span></span></input>
+                        <input id="option2" class="list-group-item" type="radio"><span></span></input>
+                        <input id="option3" class="list-group-item" type="radio"><span></span></input>
                     </div>
                     <div class="card-body">
                         <button id="next">Next</button>
