fixed timer dispalay

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="row" style="height: 140px;">
             <div class="col" class="nav">
                 <nav id="time-box" class="navbar  navbar-light bg-light" style="margin-left: auto; margin-right: auto; border-radius: 15%; height: 65px; width: 120px;" >
-               <div id="timer">Time: 60</div>
-               <div id="score">Score:</div>
+               <div >Time: </div><div id="timer">60 </div>
+               <div >Score:</div><div id="score"></div>
               </nav>
             </div>
         </div>
