got all the questions and answers to work correctly. still working on high score initials section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="col" class="nav">
                 <nav id="time-box" class="navbar  navbar-light bg-light" style="margin-left: auto; margin-right: auto; border-radius: 15%; height: 65px; width: 120px;" >
                <div >Time: </div><div id="timer">60 </div>
-               <div >Score:</div><div id="score"></div>
+               <div >Score:</div><div id="score">0</div>
               </nav>
             </div>
         </div>
@@ -45,7 +45,11 @@
              <div class="col"></div>
         </div>
         <div class="row" class="overflow-hidden" style="height:100px;">
-        <div class="col"></div></div>
+            <div class="initials" style="margin-left: auto; margin-right: auto; margin-top: 10px;">
+            <input type="text" id="initials" value="" placeholder="Enter Your Initials Here">
+            <button id="btn_submit_initials">Submit</button>
+            </div>
+        <!-- <div class="col"></div></div> -->
     </div>
 
     </div>
