--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                     <div class="card-body">
                         <h5 id="card-title" class="card-title">Code Quiz!</h5>
-                        <p id="question" class="card-text"> Push next to start the game</p>
+                        <p id="question" style="font-weight: bold; text-decoration: underline;"> Push next to start the game</p>
                     </div>
                     <div id="options">
                         <div  class="list-group-item" ><p id="option1">Option1</p></div>
@@ -45,10 +45,11 @@
              <div class="col"></div>
         </div>
         <div class="row" class="overflow-hidden" style="height:100px;">
-            <div class="initials" style="margin-left: auto; margin-right: auto; margin-top: 10px;">
-            <input type="text" id="initials" value="" placeholder="Enter Your Initials Here">
-            <button id="btn_submit_initials">Submit</button>
-            </div>
+            <p class="quiz" style="margin-left: auto; margin-right: auto; margin-top: 10px;">
+        
+            
+            </p>
+            <p id="quizscore"> </p>
         <!-- <div class="col"></div></div> -->
     </div>
 
